<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World! kotlin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/editText"
            android:layout_marginTop="16dp" android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:hint="@string/edit_message" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/button"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintStart_toEndOf="@+id/editText" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintBaseline_toBaselineOf="@+id/editText"
            android:text="@string/button_send" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" android:onClick="sendMessage"/>
    <Button
            android:text="@string/button_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            android:onClick="selectFile"/>
    <Button
            android:text="@string/button_is_readable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" android:onClick="isReadable"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintStart_toEndOf="@+id/button2"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/button_is_writable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4" android:onClick="isWritable"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintStart_toEndOf="@+id/button3"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/button2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:onClick="pdf2Image"/>

    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/container"
                 tools:context=".PdfRendererBasicFragment">
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>